--- a/config.example.json
+++ b/config.example.json
@@ -1,4 +1,4 @@
 {
-  "OPENWEATHER_API_KEY": "d0c83a66b6165f34a86c72b9e0ff3dec",
-  "CITY": "Ribeirao Preto,BR"
+  "OPENWEATHER_API_KEY": "COLE SUA CHAVE OPENWEATHER AQUI",
+  "CITY": "cidade,BR"
 }
